--- a/accounts/templates/common/index.html
+++ b/accounts/templates/common/index.html
@@ -4,8 +4,7 @@
 {% include 'common/header.html' %}
 <!-- // Header  -->
 
-<section class="banner padding-tb-200px sm-ptb-80px background-overlay"
-    style="background-image: url({% static 'assets/img/banner_1.jpg' %});">
+<section class="banner padding-tb-200px sm-ptb-80px background-overlay" style="background-image: url('https://nilethemes.com/html/tabib/assets/img/banner_1.jpg');">
     <div class="container z-index-2 position-relative">
         <div class="title">
             <h1 class="text-title-large text-main-color font-weight-300 margin-bottom-15px">Health Directory</h1>
