--- a/accounts/templates/common/header.html
+++ b/accounts/templates/common/header.html
@@ -5,7 +5,7 @@
 
             <div class="row">
                 <div class="col-lg-2 col-md-12">
-                    <a id="logo" href="index.html" class="d-inline-block margin-tb-15px"><img
+                    <a id="logo" href="{% url 'index' %}" class="d-inline-block margin-tb-15px"><img
                             src="{% static 'assets/img/logo-1.png' %}" alt=""></a>
                     <a class="mobile-toggle padding-13px background-main-color" href="#"><i class="fas fa-bars"></i></a>
                 </div>
@@ -59,15 +59,10 @@
                 <div class="col-lg-3 col-md-12">
                     <hr class="margin-bottom-0px d-block d-sm-none">
                     {% if request.user.is_authenticated %}
-                    <div class="nav-item dropdown float-left">
-                        <a href="dashboard-my-profile.html" class="margin-top-15px d-inline-block text-grey-3 margin-right-15px"><img src="assets/img/testimonial-3.png" class="height-30px border-radius-30" alt="">{{account.name|title}}</a>
-                    </div>
-    
-                    <div class="nav-item float-left">
-                        <a href="{% url 'logout' %}" class="nav-link margin-top-10px" data-toggle="modal" data-target="#exampleModal">
-                            <div class="text-grey-3"><i class="fa fa-fw fa-sign-out-alt"></i>Logout</div>
-                        </a>
-                    </div>
+                        
+                    <a href="{% url 'home' %}" class="margin-top-15px d-inline-block text-grey-3 margin-right-15px"><img src="{% static 'assets/img/testimonial-3.png' %}" class="height-30px border-radius-30" alt=""> {{account.name|title}}</a>
+                    <a href="{% url 'logout' %}" class="margin-tb-20px d-inline-block text-up-small float-left float-lg-right" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-fw fa-sign-out-alt"></i>Logout</a>
+                    
                     {% else %}
                     <a href="{% url 'login' %}" class="margin-tb-20px d-inline-block text-up-small float-left float-lg-right"><i class="far fa-user"></i> Login</a>
                     {% endif %}
@@ -77,3 +72,22 @@
         </div>
     </div>
 </header>
+
+<!-- Logout Modal-->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+            </div>
+            <div class="modal-body">Are you sure you want to end your current session.</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+            </div>
+        </div>
+    </div>
+</div>
