--- a/accounts/templates/admin/services.html
+++ b/accounts/templates/admin/services.html
@@ -58,52 +58,100 @@
             </div>
         </div>
         <!-- // Page Title -->
-        <div class="margin-tb-45px">
+        <div class="container-fluid">
+            <div class="row" style="margin-top:40px">
 
-            {% for i in services %}
-            <!-- clinic -->
-            <div class="background-white thum-hover box-shadow hvr-float full-width margin-bottom-45px">
-                <div class="float-lg-left margin-right-30px sm-mr-0px text-center sm-mt-35px">
-                    <img src="https://picsum.photos/200" alt="">
-                </div>
-                <div class="padding-lr-25px padding-tb-45px">
-                    <span class="text-grey-2"><i class="far fa-map"></i>{{i.category|title}}</span>
-                    <h2>
-                        <a href="#" class="d-inline-block margin-lr-10px text-grey-2 text-up-small"><i class="far fa-pencil-alt"></i> Edit</a>
-                        <a href="#" class="d-inline-block margin-lr-10px text-grey-2 text-up-small"><i class="far fa-window-close"></i> Delete</a>
-                    </h2>
-                    <!-- <div class="row no-gutters">
-                        <div class="col-lg-6 row">
-                            <div class="col-4"><a href="#" class="text-lime"><i class="far fa-bookmark"></i> Open Now!</a></div>
-                            <div class="col-4 text-center"><a href="#" class="text-red"><i class="far fa-heart"></i> Save</a></div>
-                            <div class="col-4 text-right"><a href="#" class="text-blue"><i class="far fa-hospital"></i> Hospital</a></div>
+                {% for i in services %}
+                <div class="col-lg-4 col-md-4  col-sm-6 sm-mb-40px wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;margin-top: 30px;">
+                    <div class="pricing hover-effect">
+                        <div class="pricing-head text-center">
+                            <h3 class="font-weight-700 padding-40px background-main-color margin-0px text-white">
+                                <span class=" z-index-2 position-relative d-block">{{i.category|title}}<span class="d-block text-small font-weight-300"></span>
+                                </span>
+                            </h3>
                         </div>
-                    </div> -->
+                    </div>
+                    <div class="pricing-footer">
+                        <div class="container-fluid">
+                            <div class="row" style="align-items: center;">
+                                <button class="btn btn-info btn-sm border-radius-30  text-white background-second-color  box-shadow  padding-lr-25px margin-left-30px" data-toggle="modal" data-target="#updateservice_{{i.id}}"><i class="ti ti-pencil"></i> Update</button>
 
+                                <div class="modal fade" id="updateservice_{{i.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Update Service</h5>
+                                                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                        </button>
+                                            </div>
+                                            <form method="post" action="{% url 'update_admin_service' i.id %}">
+                                            <div class="modal-body">
+                                                
+                                                    {% csrf_token %}
+                                                    <input type="text" name="update_service_name" value="{{i.category|title}}">
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                                                <button class="btn btn-primary" type="submit">Update</button>
+                                            </div>
+                                        </form>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <button class="btn btn-danger btn-sm border-radius-30  text-white background-second-color  box-shadow  padding-lr-25px margin-left-30px" data-toggle="modal" data-target="#deleteservice_{{i.id}}"><i class="ti ti-trash"></i> Delete</button>
+
+                                <div class="modal fade" id="deleteservice_{{i.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Delete Service</h5>
+                                                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                        </button>
+                                            </div>
+                                            <form method="post" action="{% url 'delete_admin_service' i.id %}">
+                                            <div class="modal-body">
+                                                
+                                                    {% csrf_token %}
+                                                    {% load widget_tweaks %} 
+                                                    <input type="text" value="{{i.category|title}}" disabled="true">
+                                                    Are you sure you want to delete this service?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                                                <button class="btn btn-danger" type="submit">Delete</button>
+                                            </div>
+                                        </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+                    </div>
                 </div>
-                <div class="clearfix"></div>
+                {% empty %}
+                <div class="alert alert-danger  margin-bottom-35px border-radius-10 padding-30px">
+                    <strong>OOPS!</strong> No Services found
+                    <hr>
+                    <p class="margin-0px">Add new services to be listed out over here.</p>
+                </div>
+                {% endfor %}
+    
+    
+                
+                <!-- pagination -->
+                <!-- <ul class="pagination pagination-md ">
+                    <li class="page-item disabled"><a class="page-link rounded-0" href="#" tabindex="-1">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link rounded-0" href="#">Next</a></li>
+                </ul> -->
+                <!-- //pagination -->
+    
             </div>
-            <!-- // clinic -->
-            {% empty %}
-            <div class="alert alert-danger  margin-bottom-35px border-radius-10 padding-30px">
-                <strong>OOPS!</strong> No Services found
-                <hr>
-                <p class="margin-0px">Add new services to be listed out over here.</p>
-            </div>
-            {% endfor %}
-
-
-            
-            <!-- pagination -->
-            <!-- <ul class="pagination pagination-md ">
-                <li class="page-item disabled"><a class="page-link rounded-0" href="#" tabindex="-1">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link rounded-0" href="#">Next</a></li>
-            </ul> -->
-            <!-- //pagination -->
-
         </div>
 
     </div>
