user signup path fix

--- a/accounts/templates/common/login.html
+++ b/accounts/templates/common/login.html
@@ -39,7 +39,7 @@
                 <div class="or"></div>
 
 
-                <p>Don't you have an account? <a href="page-sign-up.html">Register as a Service Provider</a> / <a href="{% url 'user_signup' %}">Register as a User</a> </p>
+                <p>Don't you have an account? <a href="{% url 'provider_signup' %}">Register as a Service Provider</a> / <a href="{% url 'user_signup' %}">Register as a User</a> </p>
             </form>
         </div>
     </div>
