--- a/accounts/templates/provider/sidenav.html
+++ b/accounts/templates/provider/sidenav.html
@@ -13,7 +13,7 @@
                 </a>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My items">
-                <a class="nav-link" href="{% url 'admin_services' %}">
+                <a class="nav-link" href="{% url 'available_services' %}">
             <i class="far fa-fw fa-map"></i>
             <span class="nav-link-text">All Services</span>
           </a>
@@ -21,7 +21,7 @@
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My Favorites">
                 <a class="nav-link" href="dashboard-my-favorites.html">
             <i class="fa fa-fw fa-heart"></i>
-            <span class="nav-link-text">My Favorites</span>
+            <span class="nav-link-text">My Services/Products</span>
           </a>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reviews">
@@ -31,7 +31,7 @@
           </a>
             </li>
             <li class="nav-item">
-                <span class="nav-title-text">Example Pages</span>
+                <span class="nav-title-text">Important Pages</span>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Bookings">
                 <a class="nav-link" href="dashboard-bookings.html">
