--- a/accounts/templates/provider/sidenav.html
+++ b/accounts/templates/provider/sidenav.html
@@ -19,7 +19,7 @@
           </a>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My Favorites">
-                <a class="nav-link" href="dashboard-my-favorites.html">
+                <a class="nav-link" href="{% url 'my_services' %}">
             <i class="fa fa-fw fa-heart"></i>
             <span class="nav-link-text">My Services/Products</span>
           </a>
