--- a/accounts/templates/provider/product.html
+++ b/accounts/templates/provider/product.html
@@ -22,11 +22,75 @@
                     <div class="row">
                         <div class="col-6">
                             <h1 class="font-weight-300">{{ps.service.category|title}}</h1>
+                            {% if form.errors %}
+                                {% for field in form %}
+                                    {% for error in field.errors %}
+                                        <div class="form-group label-floating">
+                                            <div class="alert alert-danger" style="margin-left:20px">
+                                                <code>{{ error }}</code>
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                {% endfor %}
+                            {% endif %}
                         </div>
                         <div class="col-6">
                             <div class="text-right">
-                                <a href="dashboard-add-listing.html" class=" btn btn-sm border-radius-30  text-white background-second-color  box-shadow  padding-lr-25px margin-left-30px" data-toggle="modal" data-target="#addservice"><i class="fas fa-plus-circle  margin-right-7px"></i> Add product</a>
-                                <a href="dashboard-add-listing.html" class=" btn btn-sm border-radius-30  text-white btn-danger  box-shadow  padding-lr-25px margin-left-30px" data-toggle="modal" data-target="#addservice"><i class="ti ti-trash  margin-right-7px"></i> Remove Service</a>
+                                <a href="#" class=" btn btn-sm border-radius-30  text-white background-second-color  box-shadow  padding-lr-25px margin-left-30px" data-toggle="modal" data-target="#addproduct"><i class="fas fa-plus-circle  margin-right-7px"></i> Add product</a>
+                                <div class="modal fade" id="addproduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Add Product</h5>
+                                                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                        </button>
+                                            </div>
+                                            <form method="post" action>
+                                            <div class="modal-body">
+                                                
+                                                    {% csrf_token %}
+                                                    {% load widget_tweaks %}
+                                                    {% render_field form.name class="form-control" type="text" required=true placeholder="Name/Title" %}
+                                                    <br>
+                                                    {% render_field form.count class="form-control" type="text" placeholder="Count/stock" %}
+                                                    <br>
+                                                    {% render_field form.cost class="form-control" type="number" placeholder="Base charges" required=true %}
+                                                    <br>
+                                                    {% render_field form.details class="form-control" type="number" placeholder="Enter details" required=true %}
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                                                <button class="btn btn-primary" type="submit">Add</button>
+                                            </div>
+                                        </form>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a href="#" class=" btn btn-sm border-radius-30  text-white btn-danger  box-shadow  padding-lr-25px margin-left-30px" data-toggle="modal" data-target="#delservice"><i class="ti ti-trash  margin-right-7px"></i> Remove Service</a>
+                                <div class="modal fade" id="delservice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Delete {{ps.service.category|title}} Service?</h5>
+                                                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                        </button>
+                                            </div>
+                                            <form method="post" action="{% url 'remove_service' ps.id %}">
+                                            <div class="modal-body">
+                                                
+                                                    {% csrf_token %}
+                                                    <p><b>Are you sure you want to delete this service and its products?</b></p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                                                <button class="btn btn-danger" type="submit">Delete</button>
+                                            </div>
+                                        </form>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div> 
                     </div>
