about to do review

--- a/accounts/templates/admin/sidenav.html
+++ b/accounts/templates/admin/sidenav.html
@@ -18,19 +18,19 @@
             <span class="nav-link-text">All Services</span>
           </a>
             </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My Favorites">
+            <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My Favorites">
                 <a class="nav-link" href="dashboard-my-favorites.html">
             <i class="fa fa-fw fa-heart"></i>
             <span class="nav-link-text">My Favorites</span>
           </a>
-            </li>
+            </li> -->
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reviews">
                 <a class="nav-link" href="dashboard-reviews.html">
             <i class="fa fa-fw fa-star"></i>
             <span class="nav-link-text">Reviews</span>
           </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <span class="nav-title-text">Example Pages</span>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Bookings">
@@ -50,7 +50,7 @@
                     <i class="far fa-fw fa-list-alt"></i>
                     <span class="nav-link-text">Packages</span>
                 </a>
-            </li>
+            </li> -->
 
             <li class="nav-item">
                 <span class="nav-title-text">User Area</span>
