--- a/accounts/templates/user/sidenav.html
+++ b/accounts/templates/user/sidenav.html
@@ -13,13 +13,13 @@
                 </a>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My items">
-                <a class="nav-link" href="{% url 'admin_services' %}">
+                <a class="nav-link" href="{% url 'user_services' %}">
             <i class="far fa-fw fa-map"></i>
             <span class="nav-link-text">All Services</span>
           </a>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My Favorites">
-                <a class="nav-link" href="dashboard-my-favorites.html">
+                <a class="nav-link" href="{% url 'my_favourite' %}">
             <i class="fa fa-fw fa-heart"></i>
             <span class="nav-link-text">My Favorites</span>
           </a>
