--- a/accounts/templates/user/sidenav.html
+++ b/accounts/templates/user/sidenav.html
@@ -25,9 +25,9 @@
           </a>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reviews">
-                <a class="nav-link" href="dashboard-reviews.html">
+                <a class="nav-link" href="{% url 'my_reviews' %}">
             <i class="fa fa-fw fa-star"></i>
-            <span class="nav-link-text">Reviews</span>
+            <span class="nav-link-text">My Reviews</span>
           </a>
             </li>
             <li class="nav-item">
