updated and pushed for chaithra

--- a/accounts/templates/admin/dashboard.html
+++ b/accounts/templates/admin/dashboard.html
@@ -44,7 +44,7 @@
                 <a class="d-block padding-30px background-amber box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
                         <i class="far fa-star text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large">12,550</span>
+                        <span class="font-2 text-extra-large">{{review}}</span>
                         <span class="margin-left-10px">Total Reviews</span>
                     </h6>
                 </a>
@@ -64,13 +64,13 @@
                     <div class="col-lg-6">
                         {% include 'admin/pager.html' %}
 
+                        
                         <!-- -->
-                        {% include 'admin/activity.html' %}
                     </div>
 
                     <div class="col-lg-6">
                         <!-- -->
-                        {% include 'admin/reviews.html' %}
+                        <!--  -->
                     </div>
                 </div>
 
