--- a/accounts/templates/admin/sidenav.html
+++ b/accounts/templates/admin/sidenav.html
@@ -24,12 +24,12 @@
             <span class="nav-link-text">My Favorites</span>
           </a>
             </li> -->
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reviews">
+            <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reviews">
                 <a class="nav-link" href="dashboard-reviews.html">
             <i class="fa fa-fw fa-star"></i>
             <span class="nav-link-text">Reviews</span>
           </a>
-            </li>
+            </li> -->
             <!-- <li class="nav-item">
                 <span class="nav-title-text">Example Pages</span>
             </li>
