--- a/accounts/templates/user/services.html
+++ b/accounts/templates/user/services.html
@@ -52,7 +52,8 @@
                             <div class="pricing-footer">
                                 <a href="{% url 'add_to_fav_service' i.id %}" class="btn btn-block background-grey-1 text-dark rounded-0">Add to favorites</a>
                                 <a href="{% url 'write_review' i.id %}" class="btn btn-block background-grey-1 text-dark rounded-0">Write Review</a>
-                                <a href="{% url 'service_reviews' i.id %}" class="btn btn-block background-grey-1 text-dark rounded-0">Reviews</a>
+                                <a href="{% url 'service_reviews' i.id %}" class="btn btn-block background-grey-1 text-dark rounded-0">View Reviews</a>
+                                <a href="{% url 'make_service_booking' i.id %}" class="btn btn-block background-second-color text-white rounded-0">Make Booking</a>
                             
                             </div>
                         </div>
