user account completed

--- a/accounts/templates/user/booking_success.html
+++ b/accounts/templates/user/booking_success.html
@@ -68,7 +68,7 @@
                                 <input type="text" class="listing-form first border-radius-10" placeholder="Booking Amount:{{booking.amount_transferred}}" value="Booking Amount:{{booking.amount_transferred}}" disabled />
                             </div>
                             <div class="margin-bottom-20px">
-                                <input type="text" class="listing-form first border-radius-10" placeholder="Booking Timestamp:{{booking.datetime}}" value="Booking Amount:{{booking.datetime}}" disabled />
+                                <input type="text" class="listing-form first border-radius-10" placeholder="Booking Time Stamp:{{booking.datetime}}" value="Booking Time Stamp:{{booking.datetime}}" disabled />
                             </div>
                         </form>
                     </div>
