--- a/accounts/templates/user/sidenav.html
+++ b/accounts/templates/user/sidenav.html
@@ -31,15 +31,15 @@
           </a>
             </li>
             <li class="nav-item">
-                <span class="nav-title-text">Example Pages</span>
+                <span class="nav-title-text">Purchase Reports</span>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Bookings">
-                <a class="nav-link" href="dashboard-bookings.html">
+                <a class="nav-link" href="{% url 'my_bookings' %}">
                     <i class="far fa-fw fa-bookmark"></i>
                     <span class="nav-link-text">Bookings</span>
                 </a>
             </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Add Listing">
+            <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Add Listing">
                 <a class="nav-link" href="dashboard-add-listing.html">
                     <i class="fa fa-fw fa-plus-circle"></i>
                     <span class="nav-link-text">Add Listing</span>
@@ -50,7 +50,7 @@
                     <i class="far fa-fw fa-list-alt"></i>
                     <span class="nav-link-text">Packages</span>
                 </a>
-            </li>
+            </li> -->
 
             <li class="nav-item">
                 <span class="nav-title-text">User Area</span>
