--- a/accounts/templates/common/header.html
+++ b/accounts/templates/common/header.html
@@ -64,7 +64,7 @@
                     <a href="{% url 'logout' %}" class="margin-tb-20px d-inline-block text-up-small float-left float-lg-right" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-fw fa-sign-out-alt"></i>Logout</a>
                     
                     {% else %}
-                    <a href="{% url 'login' %}" class="margin-tb-20px d-inline-block text-up-small float-left float-lg-right"><i class="far fa-user"></i> Login</a>
+                    <a href="{% url 'login' %}" class="margin-tb-20px d-inline-block text-up-small float-left float-lg-right text-right"><i class="far fa-user"></i> Login</a>
                     {% endif %}
                 </div>
             </div>
