--- a/accounts/templates/user/dashboard.html
+++ b/accounts/templates/user/dashboard.html
@@ -13,9 +13,9 @@
             <div class="col-xl-3 col-md-6 margin-bottom-30px">
                 <a class="d-block padding-30px background-main-color box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
-                        <i class="far fa-map text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large">{{services}}</span>
-                        <span class="margin-left-10px">Services</span>
+                        <i class="far fa-star text-icon-large margin-bottom-10px opacity-5 d-block"></i>
+                        <span class="font-2 text-extra-large">{{fav}}</span>
+                        <span class="margin-left-10px">My Favourite Services</span>
                     </h6>
                 </a>
             </div>
@@ -23,9 +23,9 @@
             <div class="col-xl-3 col-md-6 margin-bottom-30px">
                 <a class="d-block padding-30px background-lime box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
-                        <i class="far fa-user text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large">{{providers}}</span>
-                        <span class="margin-left-10px">Service Providers</span>
+                        <i class="fa fa-comment text-icon-large margin-bottom-10px opacity-5 d-block"></i>
+                        <span class="font-2 text-extra-large">{{review}}</span>
+                        <span class="margin-left-10px">My Reviews</span>
                     </h6>
                 </a>
             </div>
@@ -33,14 +33,14 @@
             <div class="col-xl-3 col-md-6 margin-bottom-30px">
                 <a class="d-block padding-30px background-red box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
-                        <i class="fas fa-chart-line text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large">{{public}}</span>
-                        <span class="margin-left-10px">Public Users</span>
+                        <i class="far fa-calendar-alt text-icon-large margin-bottom-10px opacity-5 d-block"></i>
+                        <span class="font-2 text-extra-large">{{booking}}</span>
+                        <span class="margin-left-10px">My Bookings</span>
                     </h6>
                 </a>
             </div>
 
-            <div class="col-xl-3 col-md-6 margin-bottom-30px">
+            <!-- <div class="col-xl-3 col-md-6 margin-bottom-30px">
                 <a class="d-block padding-30px background-amber box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
                         <i class="far fa-star text-icon-large margin-bottom-10px opacity-5 d-block"></i>
@@ -48,7 +48,7 @@
                         <span class="margin-left-10px">Total Reviews</span>
                     </h6>
                 </a>
-            </div>
+            </div> -->
 
             
 
