--- a/accounts/templates/provider/dashboard.html
+++ b/accounts/templates/provider/dashboard.html
@@ -14,8 +14,8 @@
                 <a class="d-block padding-30px background-main-color box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
                         <i class="far fa-map text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large"></span>
-                        <span class="margin-left-10px">Services</span>
+                        <span class="font-2 text-extra-large">{{service}}</span>
+                        <span class="margin-left-10px">My Services</span>
                     </h6>
                 </a>
             </div>
@@ -24,8 +24,8 @@
                 <a class="d-block padding-30px background-lime box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
                         <i class="far fa-user text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large"></span>
-                        <span class="margin-left-10px">Service Providers</span>
+                        <span class="font-2 text-extra-large">{{product}}</span>
+                        <span class="margin-left-10px">My Products</span>
                     </h6>
                 </a>
             </div>
@@ -34,8 +34,8 @@
                 <a class="d-block padding-30px background-red box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
                         <i class="fas fa-chart-line text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large"></span>
-                        <span class="margin-left-10px">Public Users</span>
+                        <span class="font-2 text-extra-large">{{booking}}</span>
+                        <span class="margin-left-10px">Bookings</span>
                     </h6>
                 </a>
             </div>
@@ -44,7 +44,7 @@
                 <a class="d-block padding-30px background-amber box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
                         <i class="far fa-star text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large">12,550</span>
+                        <span class="font-2 text-extra-large">{{review}}</span>
                         <span class="margin-left-10px">Total Reviews</span>
                     </h6>
                 </a>
