--- a/accounts/templates/provider/sidenav.html
+++ b/accounts/templates/provider/sidenav.html
@@ -47,12 +47,12 @@
                 <span class="nav-title-text">Important Pages</span>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Bookings">
-                <a class="nav-link" href="dashboard-bookings.html">
+                <a class="nav-link" href="{% url 'bookings' %}">
                     <i class="far fa-fw fa-bookmark"></i>
                     <span class="nav-link-text">Bookings</span>
                 </a>
             </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Add Listing">
+            <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Add Listing">
                 <a class="nav-link" href="dashboard-add-listing.html">
                     <i class="fa fa-fw fa-plus-circle"></i>
                     <span class="nav-link-text">Add Listing</span>
@@ -63,7 +63,7 @@
                     <i class="far fa-fw fa-list-alt"></i>
                     <span class="nav-link-text">Packages</span>
                 </a>
-            </li>
+            </li> -->
 
             <li class="nav-item">
                 <span class="nav-title-text">User Area</span>
