password reset added

--- a/accounts/templates/common/login.html
+++ b/accounts/templates/common/login.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="remember">
-                    <a href="#" class="forgot">Forgot my Password</a>
+                    <a href="{% url 'reset_password' %}" class="forgot">Forgot my Password</a>
                 </div>
                 
                 <button type="submit" class="btn btn-md btn-primary full-width">Login</button>
