--- a/accounts/templates/user/signup.html
+++ b/accounts/templates/user/signup.html
@@ -11,9 +11,9 @@
     <div class="container text-center">
         <ol class="breadcrumb opacity-5">
             <li><a href="{% url 'index' %}">Home</a></li>
-            <li class="active">Sing Up</li>
+            <li class="active">Sign Up</li>
         </ol>
-        <h1 class="font-weight-300">User Sing Up</h1>
+        <h1 class="font-weight-300">User Sign Up</h1>
     </div>
 </div>
 
